2009-11-05  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitri Titov.

        We should not bubble up events if we drag something to an iframe that
        has an invalid source.
        https://bugs.webkit.org/show_bug.cgi?id=30469

        Test: http/tests/misc/bubble-drag-events.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleDragAndDropForTarget):
        (WebCore::EventHandler::updateDragAndDrop):
        (WebCore::EventHandler::cancelDragAndDrop):
        (WebCore::EventHandler::performDragAndDrop):
        * page/EventHandler.h:
        (WebCore::EventHandler::):

2009-11-05  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: speed up Timelines Clear by a factor of thousands.

        https://bugs.webkit.org/show_bug.cgi?id=31160

        * inspector/front-end/utilities.js:
        (Element.prototype.removeChildren):

2009-11-05  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        If high memory usage is detected, hint to V8 that it might be due
        to external objects retained by V8 objects.
        https://bugs.webkit.org/show_bug.cgi?id=31051

        * bindings/v8/V8GCController.cpp:
        (WebCore::GetMemoryUsageInMB):
        (WebCore::V8GCController::gcEpilogue):
        (WebCore::V8GCController::checkMemoryUsage):
        * bindings/v8/V8GCController.h:
        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::evaluate):
        (WebCore::V8Proxy::runScript):
        (WebCore::V8Proxy::callFunction):

2009-11-05  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Simon Fraser.

        Correct order of matrix multiplication for SVGMatrix.
        https://bugs.webkit.org/show_bug.cgi?id=16062

        Test: svg/dom/SVGMatrix-interface.xhtml

        * bindings/js/JSSVGMatrixCustom.cpp:
        (WebCore::JSSVGMatrix::multiply):
        * svg/SVGMatrix.idl:

2009-11-04  Pavel Feldman  <pfeldman@chromium.org>
